--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,3 +1,13 @@
+@article{boas2019electoral,
+  title={{Electoral Incentives to Combat Mosquito-Borne Illnesses: Experimental Evidence from Brazil}},
+  author={Boas, Taylor C and Hidalgo, F Daniel},
+  journal={World Development},
+  volume={113},
+  pages={89--99},
+  year={2019},
+  publisher={Elsevier}
+}
+
 @article{lazear2000performance,
   title={Performance pay and productivity},
   author={Lazear, Edward P},
